Get UI book info displayed on webpage
Need to fix the code so that the entire array isn't added again each
time one book is added.

--- a/style.css
+++ b/style.css
@@ -20,13 +20,10 @@ body {
 .cards {
     display: grid;
     grid-template-columns: repeat(4, minmax(300px, 1fr));
+    gap: 50px;
 }
 
-.card {
-    border: solid orangered 5px;
+div.cards > * {
+    border: solid orange 5px;
     padding: 20px;
-}
-
-#read {
-
 }
