Create modal to add new book

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: aquamarine;
+    background-color: whitesmoke;
 }
 
 .container {
@@ -13,8 +13,14 @@ body {
     gap: 50px;
 }
 
+input {
+    width: 300px;
+}
+
 .newBook {
     font-weight: 700;
+    display: flex;
+    flex-direction: column
 } 
 
 .cards {
@@ -24,7 +30,71 @@ body {
 }
 
 div.cards > * {
-    border: solid orange 5px;
+    border: solid orangered 5px;
+    background-color: orange;
     padding: 20px;
     font-size: 2rem;
+    font-weight: 500;
+}
+
+#openModal, #addBtn {
+    border: solid orangered;
+    border-radius: 10px;
+    background-color: orangered;
+    font-weight: 700;
+    font-size: 1.25rem;
+    color: white;
+    padding: 10px;
+    max-width: 200px;
+}
+
+#addBtn {
+    justify-self: center;
+    margin-top: 10px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 35%; /* Could be more or less, depending on screen size */
+}
+  
+.close {
+    color: #aaa;
+    margin-left: 95%;
+    font-size: 28px;
+    font-weight: bold;
+}
+  
+.close:hover, .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.pages, .title, .author, .read {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    padding: 10px;
+}
+
+label {
+    font-weight: 700;
 }
