--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ input {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(4, minmax(300px, 1fr));
+    grid-template-columns: repeat(3, minmax(300px, 1fr));
     gap: 50px;
 }
 
@@ -48,6 +48,7 @@ input {
     font-weight: 500;
     display: flex;
     flex-direction: column;
+    align-items: center;
 } 
 
 #openModal, #addBtn {
